--- a/src/resources/assets/sass/components/_header.scss
+++ b/src/resources/assets/sass/components/_header.scss
@@ -9,7 +9,12 @@
     @include element(item) {
         @include modifier(right) {
             .header__nav > li {
-                float: right;
+                text-align: right;
+            }
+
+            .header__dropdown__menu {
+                right: 0;
+                left: auto;
             }
         }
     }
